# Code-Performance-Optimization

./: .gitignore  README.md  main.cpp  search_best.h
CUDASample/: CMakeLists.txt  main.cu
Cosine-Distance/: CMakeLists.txt  timer.h
CosineDistance/: cosine_similarity.h
ThreadPool/: CMakeLists.txt  ThreadPool.h  main.cpp
